Rebrand to BASED Eval with Codenames as first game
- Rename package from 'playbook' to 'based'
- CLI command now 'based' instead of 'playbook'
- Adopt Codenames terminology:
  - Coach → Spymaster
  - Player → Operative
  - Play → Clue
  - Targets → Agents
  - Civilians → Bystanders
  - Illegal Target → Assassin
- Rename prompt files:
  - red_coach.md → red_spymaster.md
  - blue_coach.md → blue_spymaster.md
  - red_player.md → red_operative.md
  - blue_player.md → blue_operative.md
- Update all documentation (README, AGENT.md, PROMPT_SCHEMA.md)
- Update all tests with new imports and terminology
- BASED = Benchmark for Association, Sorting, and Entity Deduction
- Framework designed to support multiple games (Codenames is first)

--- a/inputs/model_mappings.yml
+++ b/inputs/model_mappings.yml
@@ -55,7 +55,7 @@ models:
   deepseek: "deepseek/deepseek-r1"
   deepseek-coder: "deepseek/deepseek-coder"
   deepseek-v3: "deepseek/deepseek-chat-v3-0324"
-  deepseek-r1: "deepseek/deepseek-r1-0528"
+  deepseek-r1: "deepseek/deepseek-r1"
   
   # Cohere models (if available through OpenRouter)
   command-r: "cohere/command-r"
