--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "playbook-simulator"
+name = "based-eval"
 version = "0.1.0"
-description = "The Playbook AI Game Simulator - a game of clandestine communication and deduction"
+description = "BASED Eval - Benchmark for Association, Sorting, and Entity Deduction - A multi-game AI evaluation framework"
 authors = [
     {name = "Jacob Matson", email = "jacob@example.com"},
 ]
@@ -15,19 +15,19 @@ dependencies = [
     "tenacity>=8.0.0",
     "requests>=2.25.0",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-playbook = "playbook.cli:app"
+based = "based.cli:app"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["playbook"]
+packages = ["based"]
 
 [tool.uv]
 dev-dependencies = [
