--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "pydantic>=2.0.0",
     "tenacity>=8.0.0",
     "requests>=2.25.0",
+    # Optional but recommended for full functionality
+    "tiktoken>=0.5.0",  # For token counting
+    "duckdb>=1.0.0",    # For MotherDuck integration
 ]
 requires-python = ">=3.12,<3.14"
 readme = "README.md"
@@ -27,7 +30,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["based"]
+packages = ["based", "shared"]
 
 [tool.uv]
 dev-dependencies = [
@@ -37,3 +40,7 @@ dev-dependencies = [
     "isort>=5.0.0",
     "mypy>=1.0.0",
 ]
+
+[tool.hatch.build.targets.wheel.sources]
+# Include shared inputs in the package
+"shared/inputs" = "shared/inputs"
