--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,14 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-based = "based.cli:app"
+based = "codenames.cli:app"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["based", "shared"]
+packages = ["codenames", "shared"]
 
 [tool.uv]
 dev-dependencies = [
