--- a/shared/inputs/model_mappings.yml
+++ b/shared/inputs/model_mappings.yml
@@ -7,7 +7,7 @@
 canonical_models:
   # 100% win rate
   - gpt5.2-pro
-  - gemini-3-preview
+  - gemini-3-pro
   - o3
   - gpt5
   - grok4
@@ -62,7 +62,7 @@ models:
     # Google reasoning models
     gemini-2.5: "google/gemini-2.5-pro"
     gemini-flash: "google/gemini-2.5-flash"
-    gemini-3-preview: "google/gemini-3-pro-preview"
+    gemini-3-pro: "google/gemini-3-pro-preview"
     gemini-3-flash: "google/gemini-3-flash-preview"
     
     # Anthropic reasoning models  
